@@ -909,9 +909,7 @@ operator|==
 literal|0
 condition|)
 block|{
-name|int
-name|numContainersComparison
-init|=
+return|return
 name|this
 operator|.
 name|getNumContainers
@@ -921,24 +919,7 @@ name|other
 operator|.
 name|getNumContainers
 argument_list|()
-decl_stmt|;
-if|if
-condition|(
-name|numContainersComparison
-operator|==
-literal|0
-condition|)
-block|{
-return|return
-literal|0
 return|;
-block|}
-else|else
-block|{
-return|return
-name|numContainersComparison
-return|;
-block|}
 block|}
 else|else
 block|{
